--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
   width: 64px;
 }
 
+.jumbotron {
+  background-image: url('../img/bgimg.jpg');
+}
+
 dataset {
   display: block;
   border-bottom: 1px #d6d6d6 solid;
