--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@
 }
 
 .btn-lg {
- background-color: grey;
- border-color: black;
+  background-color: #545454; 
+  border-color: #454545; 
 }
 
 dataset {
