--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,11 @@
 }
 
 .highlighted {
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(218, 226, 242,.75);
+}
+
+.highlightedcaption {
+  background-color: rgba(218, 226, 242,.25);
 }
 
 .btn-lg {
